Add IT support, tickets, tasks, notifications and scenario activities